--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,11 @@
   <parent>
     <groupId>me.hsgamer.bettergui</groupId>
     <artifactId>addon-parent</artifactId>
-    <version>2.1</version>
+    <version>3.0</version>
   </parent>
 
   <artifactId>BlockListener</artifactId>
-  <version>3.0</version>
+  <version>4.0</version>
   <packaging>jar</packaging>
 
   <name>BlockListener</name>
@@ -27,4 +27,14 @@
       <url>https://repo.codemc.io/repository/maven-public/</url>
     </repository>
   </repositories>
+
+  <dependencies>
+    <dependency>
+      <groupId>me.hsgamer</groupId>
+      <artifactId>BloCommands</artifactId>
+      <version>1.1</version>
+      <scope>system</scope>
+      <systemPath>${project.basedir}/libs/BloCommands-1.1.jar</systemPath>
+    </dependency>
+  </dependencies>
 </project>
